--- a/css/Nosotros.css
+++ b/css/Nosotros.css
@@ -67,6 +67,20 @@ body {
 }
 
 /* NAV LINKS DESKTOP */
+
+.nav_toggle {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+.nav_toggle .bar {
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  margin: 4px 0;
+}
 .nav__link {
   list-style: none;
   display: flex;
@@ -348,23 +362,12 @@ body {
   text-decoration: underline;
 }
 
-/* HAMBURGER */
-.hamburger {
-  display: none;
-  flex-direction: column;
-  cursor: pointer;
-  gap: 5px;
-}
-.hamburger span {
-  height: 3px;
-  width: 25px;
-  background: var(--white);
-  border-radius: 2px;
-  transition: all 0.3s ease;
-}
-
 /* Responsive */
 @media (max-width: 768px) {
+
+  .nav_toggle {
+    display: flex;
+  }
   .nav__link {
     display: none;
     flex-direction: column;
@@ -378,11 +381,17 @@ body {
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
   }
 
-  .nav__link.show {
+   .nav_link.active {
     display: flex;
   }
 
-  .hamburger {
+   .nav_links {
+    padding: 1rem;
+    color: white;
+    text-align: center;
+  }
+
+  .nav__link.show {
     display: flex;
   }
 
